# nixsa

./: .gitignore  Cargo.toml  README.md  flake.nix  lefthook.toml  nixsa  nixsa.py  nixsa_build.py  pyproject.toml
.github/workflows/: build-aarch64-linux.yml  build-x86_64-linux.yml  ci.yml  release-tags.yml  update.yml
nix/: check.nix
nixsa-bin/: Cargo.toml
nixsa-bin/src/: main.rs
nixsa-build/: check_tarball.py  nixsa_build.py  pyproject.toml
src/: main.rs
src/nixsa/: __init__.py
